--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
@@ -12,4 +12,12 @@
             }
         }
     }
+
+    .bg--light .section__content & {
+        background-color: $color--white; // mask grid lines
+    }
+
+    .bg--dark .section__content & {
+        background-color: $color--black; // mask grid lines
+    }
 }
