--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
@@ -9,7 +9,6 @@
     padding-top: $gutter;
     color: inherit;
     font-family: $font--primary;
-    border-left: 1px solid $color--grid-line-dark;
 
     // Bottom border, done with a pseudo element rather than a border,
     // so it can overflow to the right and leave some space for people to scroll
@@ -19,7 +18,6 @@
         grid-column: 1 / span 2;
         height: 1px;
         width: calc(100% + #{$gutter});
-        background-color: $color--grid-line-dark;
         pointer-events: none;
 
         @include media-query(medium) {
@@ -132,6 +130,19 @@
             }
         }
 
+        .category-item__wrapper {
+            &:last-child {
+                #{$root} {
+                    // match section__row--last, but needs to mask grid lines
+                    padding-bottom: ($gutter * 3);
+
+                    @include media-query(large) {
+                        padding-bottom: ($gutter * 6);
+                    }
+                }
+            }
+        }
+
         #{$root}__heading,
         #{$root}__description {
             max-width: 440px;
@@ -145,6 +156,38 @@
             @include media-query(large) {
                 // Reset
                 padding-left: 7%;
+            }
+        }
+    }
+
+    .bg--light & {
+        border-left: 1px solid $color--grid-line-dark;
+
+        &::after {
+            background-color: $color--grid-line-dark;
+        }
+    }
+
+    .bg--dark & {
+        border-left: 1px solid $color--grid-line-light;
+
+        &::after {
+            background-color: $color--grid-line-light;
+        }
+    }
+}
+
+// Because wrapper is outside of it's parent, this has to be seperate
+.section__content {
+    .category-item__wrapper {
+        &:last-child {
+            .category-item {
+                // match section__row--last, but needs to mask grid lines
+                padding-bottom: ($gutter * 3);
+
+                @include media-query(large) {
+                    padding-bottom: ($gutter * 6);
+                }
             }
         }
     }
