--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable-block indentation
 // --------------------------------- Colors -------------------------------------
 
 $color--black: #000;
