--- a/rca/static_src/sass/components/_hero.scss
+++ b/rca/static_src/sass/components/_hero.scss
@@ -7,14 +7,13 @@
     }
 
     &--home {
+        // sass-lint:disable-block no-duplicate-properties
         @include z-index(base);
         position: fixed;
         left: 0;
         width: 100%;
         height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-        height: calc(
-            var(--vh, 1vh) * 100
-        ); // sass-lint:disable-line no-duplicate-properties
+        height: calc(var(--vh, 1vh) * 100);
     }
 
     &__image {
@@ -48,10 +47,9 @@
     }
 
     &__placeholder {
+        // sass-lint:disable-block no-duplicate-properties
         height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-        height: calc(
-            var(--vh, 1vh) * 100
-        ); // sass-lint:disable-line no-duplicate-properties
+        height: calc(var(--vh, 1vh) * 100);
         pointer-events: none;
     }
 
