--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -1,6 +1,13 @@
 .related-content {
+    $root: &;
     padding-top: ($gutter * 4);
     padding-bottom: ($gutter * 6);
+
+    &--large {
+        #{$root}__title {
+            font-family: $font--primary;
+        }
+    }
 
     &__group {
         margin-bottom: ($gutter * 3);
