--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -17,6 +17,7 @@
     }
 
     &--subnav {
+        // sass-lint:disable-block no-vendor-prefixes
         position: relative;
         height: 100%;
         display: none;
@@ -27,10 +28,8 @@
 
         // hide scrollbars as per clients request
         scrollbar-width: none; // sass-lint:disable-line no-misspelled-properties
-        -ms-overflow-style: none; // sass-lint:disable-line no-vendor-prefixes
 
         &::-webkit-scrollbar {
-            // sass-lint:disable-line no-vendor-prefixes
             display: none;
         }
 
