refactor section__container to section__row for consistency

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -83,7 +83,7 @@
             <div class="section__notch section__notch--top">
                 <div class="section__notch-fill section__notch-fill--third-col"></div>
             </div>
-            <div class="section__container">
+            <div class="section__row">
                 <header class="section__header grid">
                     <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
                 </header>
