--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -4,7 +4,7 @@
     <div class="section__notch section__notch--transparent section__notch--opposite">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
-    <div class="section__container stat-block">
+    <div class="section__row stat-block">
         <div class="stat-block__header grid">
             <h3 class="stat-block__heading heading heading--three">{{ stats_block.title}}</h3>
         </div>
