--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -88,7 +88,7 @@
                     </div>
 
 
-                    <div class="section__container">
+                    <div class="section__row">
 
                         <header class="section__header grid">
                             <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
