--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -61,7 +61,7 @@
 
                 <section class="section bg bg--light">
                     <div class="contact-anchor" id="contact"></div>
-                    <div class="section__container">
+                    <div class="section__row">
                         {% include "patterns/organisms/contact/contact.html" with heading=programme_page_global_fields.contact_title text=programme_page_global_fields.contact_text image=page.contact_image %}
                     </div>
                 </section>
@@ -70,7 +70,7 @@
                     <div class="section__notch">
                         <div class="section__notch-fill section__notch-fill--third-col"></div>
                     </div>
-                    <div class="section__container">
+                    <div class="section__row">
                         {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=programme_page_global_fields.related_content_title %}
                     </div>
                 </section>
