--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -27,7 +27,7 @@
             <div data-mount-programmes-explorer data-search-label="{{ page.search_placeholder_text }}"></div>
 
             <section class="section section--top-space-large bg bg--light">
-                <div class="section__container">
+                <div class="section__row">
                     {% include "patterns/organisms/contact/contact.html" with heading=page.contact_title text=page.contact_text image=page.contact_image %}
                 </div>
             </section>
