Various tweeks... mainly ensure course id is required and create a test that will fail if changed

--- a/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
@@ -18,8 +18,8 @@
                 </div>
                 <div class="short-course-details-item__content rich-text">
                     {{ page.course_details_text|safe }}
-                    {{ page.terms_and_conditions.body }}
-                    {{ page.frequently_asked_questions.body }}
+                    {{ page.terms_and_conditions.body|safe }}
+                    {{ page.frequently_asked_questions.body|safe }}
                 </div>
             </div>
         </div>
