--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -63,6 +63,7 @@
 @import 'components/pathways';
 @import 'components/pathway-item';
 @import 'components/partnerships';
+@import 'components/people-module';
 @import 'components/profile-detail';
 @import 'components/profile-image';
 @import 'components/profile-teaser';
