--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -61,15 +61,12 @@
 </section>
 
 <section class="section section--end bg bg--light">
-    {% with staff=related_staff %}
-        {% if staff %}
-            {% if staff|length > 1 %}
-                    {% include "patterns/organisms/staff-overview/staff-overview.html" %}
-            {% else %}
-                {% include "patterns/organisms/staff-overview/staff-overview--single.html" %}
-            {% endif %}
-        {% endif %}
-    {% endwith %}
+    
+    {% if related_staff %}
+        <div class="section__row section__row--first section__row--last">
+            {% include "patterns/organisms/people-module/people-module.html" with people=related_staff %}
+        </div>
+    {% endif %}
 
     {% include "patterns/organisms/facilities/facilities.html" with title='Facilities' slideshow=page.facilities_gallery  %}
 
