--- a/rca/static_src/sass/components/_profile-teaser.scss
+++ b/rca/static_src/sass/components/_profile-teaser.scss
@@ -18,7 +18,7 @@
             }
 
             #{$root}__heading {
-                text-decoration: underline;
+                @include underline-hover();
             }
         }
     }
@@ -48,7 +48,13 @@
     }
 
     &__heading {
+        position: relative;
         word-break: break-word; // ensure long names wrap
+        margin-bottom: ($gutter / 4);
+
+        @include media-query(large) {
+            line-height: 1.3;
+        }
     }
 
     &__meta {
