--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -8,11 +8,18 @@
     {% endif %}
 
     {% for related_section in related_sections %}
+
+        
+
         <div class="related-content__group" data-group="{{ forloop.counter }}">
             
-            {% if programme_page_global_fields.related_content_subtitle %}
+            {% if programme_page_global_fields.related_content_subtitle or related_section.title %}
                 <div class="section__row grid">
-                    <h3 class="related-content__subheading heading heading--five">{{ programme_page_global_fields.related_content_subtitle }}</h3>
+                    {% if programme_page_global_fields.related_content_subtitle %}
+                        <h3 class="related-content__subheading heading heading--five">{{ programme_page_global_fields.related_content_subtitle }}</h3>
+                    {% elif related_section.title %}
+                        <h3 class="related-content__subheading heading heading--five">{{ related_section.title }}</h3>
+                    {% endif %}
                 </div>
             {% endif %}
 
