New text teaser component

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -93,6 +93,7 @@
 @import 'components/tabs';
 @import 'components/tab-item';
 @import 'components/tab-nav';
+@import 'components/text-teaser';
 @import 'components/title-area';
 @import 'components/quote';
 @import 'components/upcoming-dates';
