--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
@@ -53,7 +53,7 @@
 
                 {% if page.feature_image %}
                     <div class="section__row">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False out_of_grid=True curriculum=False subheading=False has_meta=True heading=page.feature_heading meta_heading=page.feature_meta_heading meta_copy=page.feature_meta_text href=page.feature_meta_link image=page.feature_image %}
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=page.feature_heading meta_heading=page.feature_meta_heading meta_copy=page.feature_meta_text href=page.feature_meta_link image=page.feature_image %}
                     </div>
                 {% endif %}
 
@@ -115,35 +115,41 @@
 
             </section>
 
-            <section class="section bg bg--dark">
-
-                {% if page.middle_feature_image %}
-                    <div class="section__row">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False out_of_grid=True curriculum=False subheading=False has_meta=True heading=page.middle_feature_heading meta_heading=page.middle_feature_meta_heading meta_copy=page.middle_feature_meta_text href=page.middle_feature_meta_link image=page.middle_feature_image %}
+            {% if page.middle_feature_image %}
+                <section class="section bg bg--dark">
+                    <div class="section__row section__row--first section__row--last">
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=page.middle_feature_heading meta_heading=page.middle_feature_meta_heading meta_copy=page.middle_feature_meta_text href=page.middle_feature_meta_link image=page.middle_feature_image %}
                     </div>
-                {% endif %}
-
-            </section>
+                </section>
+            {% endif %}
 
             {% if page.stats_block %}
                 {% include "patterns/organisms/stat-block/stat-block.html" %}
             {% endif %}
 
-            {% if page.research %}
+            {% if page.research or page.text_teaser %}
                 <section class="section bg bg--light">
 
-                    <div class="section__row section__row--first section__row--last">
-                        <div class="partnerships">
-                            {% if page.research.title %}
-                                <div class="partnerships__header grid">
-                                    <h2 class="partnerships__heading heading heading--two">{{ page.research.title }}</h2>
+                    {% if page.research %}
+                        <div class="section__row section__row--first section__row--last">
+                            <div class="partnerships">
+                                {% if page.research.title %}
+                                    <div class="partnerships__header grid">
+                                        <h2 class="partnerships__heading heading heading--two">{{ page.research.title }}</h2>
+                                    </div>
+                                {% endif %}
+                                <div class="partnerships__carousel">
+                                    {% include "patterns/organisms/carousel/carousel--square.html" with carousel=page.research.slides modifier='carousel--square' datatag='data-square-carousel' %}
                                 </div>
-                            {% endif %}
-                            <div class="partnerships__carousel">
-                                {% include "patterns/organisms/carousel/carousel--square.html" with carousel=page.research.slides modifier='carousel--square' datatag='data-square-carousel' %}
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
+
+                    {% if page.text_teaser %}
+                        <div class="section__row {% if page.research == false %}section__row--first{% endif %}section__row--last-large">
+                            {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=page.text_teaser %}
+                        </div>
+                    {% endif %}
 
                     <div class="section__notch">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
@@ -152,8 +158,14 @@
                 </section>
             {% endif %}
 
+            {% if page.bottom_feature_image %}
+                <div class="section section--start{% if page.news == false %} section--end{% endif %} bg bg--dark">
+                    {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=False curriculum=False subheading=false has_meta=True heading=page.bottom_feature_heading meta_heading=page.bottom_feature_meta_heading meta_copy=page.bottom_feature_meta_text href=page.bottom_feature_meta_link image=page.bottom_feature_image %}
+                </div>
+            {% endif %}
+
             {% if page.news %}
-                <section class="section section--start section--end bg bg--dark">
+                <section class="section{% if page.bottom_feature_image == false %} section--start{% endif %} section--end bg bg--dark">
                     <header class="section__header grid">
                         <h3 class="section__heading section__heading--primary heading heading--two">News</h3>
                     </header>
